--- a/src/app/submissions-viewer.component.html
+++ b/src/app/submissions-viewer.component.html
@@ -1,4 +1,10 @@
 <div class="container" *ngIf="templateName">
+      <div class="page-header">
+        <button mat-stroked-button color="primary" (click)="close.emit()" style="margin-bottom: 1rem;">
+          <mat-icon>arrow_back</mat-icon>
+          <span>Back</span>
+        </button>
+      </div>
       <h2>Submissions: {{ templateName }}</h2>
 
       <div *ngIf="isLoading" class="loading-spinner">Loading submissions...</div>
