--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -23,12 +23,11 @@
       </header>
 
       <!-- Template Indicator Tab -->
-      <div *ngIf="templateName && mode !== 'create'" class="template-indicator">
+      <div *ngIf="templateName && mode === 'use'" class="template-indicator">
         <div class="template-tab-v2 template-tab-horizontal">
           <span class="template-label">You are currently filling:</span>
           <mat-icon class="template-icon">description</mat-icon>
           <span class="template-name">{{ templateName }}</span>
-          <span class="template-mode-badge" *ngIf="mode === 'preview'">Preview</span>
         </div>
       </div>
 
